force-app/main/default/objects/Certification__c/fields/BadgeName_t__c.field-meta.xml
<CustomField>
    <fullName>BadgeName_t__c</fullName>
    <label>Badge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>