force-app/main/default/objects/Certification__c/fields/Image_f__c.field-meta.xml
<CustomField>
    <fullName>Image_f__c</fullName>
    <formula>IMAGE(&apos;/resource/badges/&apos; +  BadgeName_t__c , BadgeName_t__c, 200, 200)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>