force-app/main/default/objects/Certification__c/fields/IssuedOn_d__c.field-meta.xml
<CustomField>
    <fullName>IssuedOn_d__c</fullName>
    <label>Issued On</label>
    <type>Date</type>
</CustomField>