force-app/main/default/objects/Certification__c/fields/Title_t__c.field-meta.xml
<CustomField>
    <fullName>Title_t__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>