force-app/main/default/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IssuedOn_d__c</columns>
    <columns>Title_t__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>